--- a/css/main.css
+++ b/css/main.css
@@ -13746,8 +13746,8 @@ html {
 }
 
 .header__nav__button__span {
-  width: 4rem !important;
-  height: 4rem !important;
+  width: 4rem;
+  height: 4rem;
 }
 
 .header__nav__text {
@@ -13763,12 +13763,12 @@ html {
 }
 
 .header__nav__text__ul__li__div {
-  margin-top: 2.5rem !important;
+  margin-top: 2.5rem;
   width: 33rem;
 }
 
 .header__nav__text__ul__li__div:hover {
-  background-color: white !important;
+  background-color: white;
 }
 
 .header__nav__text__ul__li__div__a {
@@ -13778,7 +13778,7 @@ html {
 }
 
 .header__nav__text__ul__li__div__a:hover {
-  background-color: transparent !important;
+  background-color: transparent;
 }
 
 .footer {
