VOlvimos para atras para arreglar el tema delcelu

--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -306,7 +306,7 @@
                         &__div{
                             &__div-texto-b{
                                 &__h2{
-                                    font-size: 2.8rem !important;
+                                    font-size: 2.8rem;
                                 }
                             }
                         }
