--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -179,7 +179,7 @@
 
     @media (max-width: 768px) {
         .index{
-            &__img {
+            &__{
                 display: none; 
             } 
         }
