--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -10,16 +10,19 @@
     //PARTE VIDEO Y FOTO
     .index{
         background-image: url(../fotos/Platos/fondoVideo1.jpg);
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
-        height:100%;
+        background-position:center;
+        background-attachment: contain;
+        height:100vh;
+        width: 100vw;
         background-color: red;
-        padding: 15rem 1rem 0rem 1rem;
-        // &__video{
-        //     height:90%;
-        //     width: auto;
-        //     z-index: 4; 
-        // }
+        margin: 18rem 0rem 0rem 0rem;
+        &__video{
+            height:90%;
+            width: auto;
+            z-index: 4; 
+        }
     }
 
 //--------------------------------------------------
