Se modifico el @media con el tema del video y la foto de fondo

--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -179,9 +179,13 @@
 
     @media (max-width: 768px) {
         .index{
-            &__{
-                display: none; 
-            } 
+            display: none;
+            margin-top:2rem
+            background-image: none;
+
+            &__video{
+                height: 100vh;
+            }
         }
     }
 
