--- a/css/main.css
+++ b/css/main.css
@@ -13840,7 +13840,6 @@ html {
   background-attachment: contain;
   height: 100vh;
   width: 100vw;
-  background-color: red;
   margin: 18rem 0rem 0rem 0rem;
 }
 
@@ -14254,8 +14253,13 @@ html {
 }
 
 @media (max-width: 768px) {
-  .index__ {
+  .index {
     display: none;
+    margin-top: 2rem;
+    background-image: none;
+  }
+  .index__video {
+    height: 95vh;
   }
 }
 
