--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -180,8 +180,8 @@
     @media (max-width: 768px) {
         .index{
             display: none;
-            margin-top:2rem
-            background-image: none;
+            margin-top:2rem;
+            background-image:none;
 
             &__video{
                 height: 100vh;
